File upload fix

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -2,8 +2,9 @@
   <div class="row" style="margin-top: 50px;">
     <div class="col-md-12">
       <div class="row-button">
-      <button mat-raised-button color="primary" for="file "type="file" id="file"
-           (change)="handleFileInput($event.target.files)" (click)=openImportModal()>{{ 'import project' | i18next }}</button>
+        <button mat-raised-button color="primary" for="file " type="file" id="file"
+          (change)="handleFileInput($event.target.files)"
+          (click)=openImportModal()>{{ 'import project' | i18next }}</button>
         <button mat-raised-button color="primary" (click)=openModal()>{{ 'create_project' | i18next }}</button>
       </div>
     </div>
@@ -241,10 +242,14 @@
             <div class="col-md-12">
               <div class="form-group">
                 <label for="file">Choose yaml file to import project</label>
-                    <input #myInput type="file" id="file"
-           (change)="handleFileInput($event.target.files)">
-                </div>
+                <input type="file" name="file" ng2FileSelect [uploader]="uploader" />
+                <!-- <input type="file" ng2FileSelect [uploader]="uploader" /> -->
+                <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()"
+                  [disabled]="!uploader.getNotUploadedItems().length">
+                  Upload
+                </button>
               </div>
+            </div>
           </div>
 
           <div class="row">
@@ -256,7 +261,7 @@
       </div>
       <div class="modal-footer">
         <div class="form-group">
-          <button type="button" class="btn button-create" (click)="importProject()">{{ 'Import' | i18next }}</button>
+          <!-- <button type="button" class="btn button-create" (click)="uploader.uploadAll()">{{ 'Import' | i18next }}</button> -->
           <button type="button" class="btn button-close" (click)="closeImportModal()">{{ 'Cancel' | i18next }}</button>
         </div>
       </div>
