yaml file clearing fix

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -242,7 +242,7 @@
             <div class="col-md-12">
               <div class="form-group">
                 <label for="file">Choose yaml file to import project</label>
-                <input type="file" name="file" ng2FileSelect [uploader]="uploader" />
+                <input #myInput type="file" name="file" ng2FileSelect [uploader]="uploader" />
               </div>
             </div>
           </div>
