--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -16,7 +16,7 @@
           <div class="form-group row">
             <label for="column">column</label>
             <select class="form-control" id="column" formControlName="selectColumn"
-              [ngClass]="{ 'is-invalid': submitted && form_control.selectColumn.errors }">
+              [ngClass]="{ 'is-invalid': submitted && form_control.selectColumn.errors }" (ngModelChange)='onColumnChange($event)'>
               <option value="" selected>none</option>
               <option *ngFor="let col of columnOptions" [ngValue]="col">{{ col.name }}</option>
             </select>
@@ -26,11 +26,11 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="fields">fields</label>
+            <label for="fields">fields</label>{{selectField}}
             <select class="form-control" id="fields" (ngModelChange)='onFieldOptions($event)'
               formControlName="selectField" [ngClass]="{ 'is-invalid': submitted && form_control.selectField.errors }">
-              <option value="" selected>none</option>
-              <option *ngFor="let field of allEntityField" [ngValue]="field.name">{{ field.name }}</option>
+              <!-- <option value="" selected>none</option> -->
+              <option *ngFor="let field of allEntityField" [value]="field.name">{{ field.name }}</option>
             </select>
             <div *ngIf="submitted && form_control.selectField.errors" class="invalid-feedback">
               <div *ngIf="form_control.selectField.errors.required">This field is required
