--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
@@ -1,3 +1,12 @@
+.container {
+    margin-top: 4%;
+    margin-bottom: 4%;
+}
+
+.fieldpopbtn {
+    padding: 0%
+}
+
 // predefined css
 
 .BoldText {
