--- a/generator/services/seed/user/profilesettings/profilesettings.component.html
+++ b/generator/services/seed/user/profilesettings/profilesettings.component.html
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="col-sm-6">
-          <button type="submit" class="btn btn-primary" (click)="Updateuser(Userobject)">Save</button>&nbsp;&nbsp;
+          <button type="submit" class="btn btn-primary" (click)="Updateuser()">Save</button>&nbsp;&nbsp;
           <button type="submit" class="btn btn-primary" (click)="cancle()">cancel</button>
       </div>
     </div>
