--- a/application/clients/desktop/src/app/navigation/header/header.component.html
+++ b/application/clients/desktop/src/app/navigation/header/header.component.html
@@ -143,7 +143,7 @@
         <button type="button" class="close">&times;</button>
       </div> -->
       <div class="modal-body">
-        <p>language change cause you to re-login</p>
+        <p>Language change cause you to re-login</p>
       </div>
       <div class="modal-footer" style="padding: 5px">
         <button type="button" (click)="confirmLangChange()" class="btn btn-default">Confirm</button>
