commit for issue 467 and 466 and loader in screen designer

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -2,9 +2,9 @@
   <div class="row" style="margin-top: 50px;">
     <div class="col-md-12">
       <div class="row-button">
-        <button mat-raised-button color="primary" for="file " type="file" id="file"
+        <!-- <button mat-raised-button color="primary" for="file " type="file" id="file"
           (change)="handleFileInput($event.target.files)"
-          (click)=openImportModal()>{{ 'import project' | i18next }}</button>
+          (click)=openImportModal()>{{ 'import project' | i18next }}</button> -->
         <button mat-raised-button color="primary" (click)=openModal()>{{ 'create_project' | i18next }}</button>
       </div>
     </div>
