--- a/application/clients/desktop/src/app/navigation/header/header.component.html
+++ b/application/clients/desktop/src/app/navigation/header/header.component.html
@@ -61,7 +61,7 @@
       <div class="modal-body">
         <p>Version: {{versionData.value}}</p>
         <p>Build Version: {{buildVersionData.value}}</p>
-        <p>Build Date: {{buildVersionData.updated_at | date: 'MMM d, y, h:mm:ss
+        <p>Build Date: {{buildVersionDate.value | date: 'MMM d, y, h:mm:ss
           a'}}</p>
       </div>
       <div class="modal-footer" style="padding: 5px;justify-content:
