Fixed the issue of only show the active flows and templates

--- a/application/clients/desktop/src/app/navigation/footer/footer.component.html
+++ b/application/clients/desktop/src/app/navigation/footer/footer.component.html
@@ -84,7 +84,7 @@
         <div>
           <p>We are an award-winning creative agency, dedicated to the best
             result in web design, promotion, business consulting, and
-            marketing.© 2019 Waves All Rights Reserved by Geppetto Software.</p>
+            marketing.© 2019-2021 All Rights Reserved by Newportbay LLC</p>
         </div>
       </div>
       <div class="col">
@@ -92,9 +92,10 @@
           <div class="col m_address">
             <h5>Contacts Us</h5>
             <div>
-              <dd> <b>Address: </b>798 South Park Avenue, Orlando</dd>
-              <dd><b>Email: </b><a href="mailto:#">dan.castillo@geppettosoftware.com</a></dd>
-              <dd><b>Phone: </b><a href="tel:#">+91 7568543012</a></dd>
+              <dd> <b>Address: </b>151 N Maitland AVE STE 941096
+                Maitland, FL 32751-5515</dd>
+              <dd><b>Email: </b><a href="mailto:#"> info@geppettosoftware.com</a></dd>
+              <dd><b>Phone: </b><a href="tel:#">001 (863) 888-0152</a></dd>
             </div>
           </div>
           <div class="col">
