Fixed the issue of geppetto compose and removed the add screens out of feature.

--- a/application/clients/desktop/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktop/src/app/project-component/project-component.component.scss
@@ -64,6 +64,9 @@
     width:16%
   
   }
+  .screens-tag-style {
+    margin-left: 75px;
+  }
   .delete .modal-body {
   height: 70px;
   overflow-y: auto;
