--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -138,18 +138,18 @@
                 </mat-expansion-panel-header>
                 <mat-card-content>
                     <div class="row">
-                        <div class='col-md-7'></div>
-                        <div class='col-md-5'>
-                            <div class="btn-group">
-                                <button class="goToButton btn-space btn_color" mat-raised-button
+                        <div class='col-md-9'></div>
+                        <div class='col-md-3'>
+                            <div class="btn-group screens-tag-style">
+                                <!-- <button class="goToButton btn-space btn_color" mat-raised-button
                                     (click)="editTemplate(screenTempId)">Modify
-                                    Template</button>
+                                    Template</button> -->
                                 <button class="goToButton btn-space btn_color" mat-raised-button
                                     [routerLink]="['/templates']" [queryParams]="{projectId: project_id}">Change
                                     Template</button>
-                                <button class="goToButton btn-space btn_color" mat-raised-button
+                                <!-- <button class="goToButton btn-space btn_color" mat-raised-button
                                     (click)="GoToDesigner()">Add
-                                    Screen</button>
+                                    Screen</button> -->
                             </div>
                         </div>
                     </div>
