--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -188,7 +188,7 @@
       </div>
       <div class="modal-footer">
         <div class="form-group">
-          <button type="button" [disabled]="!templateData" class="btn button-create" (click)="projectCreate()">{{ 'create' | i18next }}</button>
+          <button type="button" [disabled]="!templateData || !createProject.value.primaryLanguage || !createProject.value.secondoryLanguage" class="btn button-create" (click)="projectCreate()">{{ 'create' | i18next }}</button>
           <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
