--- a/application/clients/desktop/src/app/login/login.component.html
+++ b/application/clients/desktop/src/app/login/login.component.html
@@ -54,7 +54,7 @@
             <div class="col-md-6">
                 <mat-card-actions>
                     <div>
-                        <button mat-raised-button (click)='Login()' color="primary">Login</button>
+                        <button mat-raised-button (click)='Login()' color="primary">Login with Email</button>
                         <div style="color:red; text-align: center">
                             {{errormessage}}
                         </div>
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+  <!--  <div class="container">
         <div class="row" style="justify-content: center;">
             <div class="col-md-6">
                 <label class="text">Single signin</label>
@@ -79,8 +79,8 @@
             </div>
         </div>
     </div>
-    <br>
-    <div class='container' *ngIf="isSingePageSignIn">
+    <br>-->
+    <div class='container'>
         <div class="row">
             <div class="col-md-6">
                 <button type="button" class="google-button" (click)='googlesigin("google")'>
