Added the loader for every pages

--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -4,6 +4,7 @@
   <br />
   <br />
   <div>
+    <ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" type = "timer"></ngx-spinner>
     Selected Feature : {{selectedFeatureName}}
     <mat-accordion>
       <mat-expansion-panel [expanded]="true">
