--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -9,6 +9,7 @@
       </div>
     </div>
   </div>
+  <ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" type = "timer" [fullScreen] = "true"></ngx-spinner>
   <div style="height: 50px;"></div>
   <mat-accordion>
     <mat-expansion-panel [expanded]="true">
