Added the loader for remaining screens

--- a/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
+++ b/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
@@ -1,4 +1,5 @@
 <mat-expansion-panel>
+  <ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" type = "timer"></ngx-spinner>
   <mat-expansion-panel-header>
     <mat-panel-title>
       Menu Builder
