--- a/application/clients/desktop/src/app/config-manager/config-manager.component.html
+++ b/application/clients/desktop/src/app/config-manager/config-manager.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid top_align">
+  <ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" type = "timer"></ngx-spinner>
   <h1 style="text-align: center;"> <u>GpConfig Manager</u> </h1>
   <div class="row row-button">
     <button mat-raised-button color="primary" (click)="openModal('create')">{{ 'create' | i18next }}</button>
