--- a/application/clients/desktop/src/app/template-screen/template-screen.component.html
+++ b/application/clients/desktop/src/app/template-screen/template-screen.component.html
@@ -1,4 +1,5 @@
 <section class="wrapper">
+  <ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" type = "timer"></ngx-spinner>
   <div class="container">
     <div>
       <h1 class="heading">
