Added the code for form screen html template generation

--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/form.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/form.handlebars
@@ -6,7 +6,7 @@
         <label id="{{attributes.id}}" class="{{cssClass}}">{{content}}</label>
         {{/ifEquals}}
         {{#ifEquals type "input"}}
-        <input id="{{attributes.id}}" class="{{cssClass}}" [(ngModel)]="{{attributes.entityDetails.entityName}}.{{attributes.entityDetails.fields.name}}" type="text">
+        <input id="{{attributes.id}}" class="{{cssClass}}" {{#if attributes.entityDetails.entityName}}[(ngModel)]="{{attributes.entityDetails.entityName}}.{{attributes.entityDetails.fields.name}}"{{/if}} type="text">
         {{/ifEquals}}
         {{#ifEquals type "checkbox"}}
         <input type="{{type}}" id="{{attributes.id}}" class="{{cssClass}}">
@@ -15,19 +15,10 @@
         <textarea type="text" id="{{attributes.id}}" class="{{cssClass}}"></textarea>
         {{/ifEquals}}
         {{#ifEquals type "button"}}
-        <button type="{{attributes.type}}" id="{{attributes.id}}" class="{{cssClass}}">{{content}}</button>
+        <button {{#if attributes.type}}type="{{attributes.type}}"{{/if}} id="{{attributes.id}}" {{#if flowDetails.verb}}({{flowDetails.verb}})="{{flowDetails.flowName}}()"{{/if}} class="{{cssClass}}">{{content}}</button>
         {{/ifEquals}}
     {{/each}}
     </div>
     
     {{/each}}
-    {{!-- <div class="form-group">
-        <label>{{inputname1}}</label>
-        <input type="text" class="form-control">
-    </div>
-    <div class="form-group">
-        <label>{{inputname2}}</label>
-        <input type="text" class="form-control">
-    </div>
-    <button type="submit" class="btn btn-primary">{{buttonName}}</button> --}}
 </form>
