--- a/application/clients/desktop/src/app/config-manager/config-manager.component.scss
+++ b/application/clients/desktop/src/app/config-manager/config-manager.component.scss
@@ -10,6 +10,11 @@
 .flowTable {
     margin-top: 50px
 }
+
+.loading-image {
+    margin-bottom: 15px;
+}
+
 .top_align{
     margin-top: 5%;
     height:auto;
