--- a/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.scss
+++ b/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.scss
@@ -16,6 +16,10 @@ modal {
     }
 }
 
+.loading-image {
+    margin-bottom: 15px;
+}
+
 .col-header {
     text-align: center;
     color: #3a7bd5;
@@ -26,9 +30,11 @@ modal {
     text-align: center;
     padding-top: 2%;
 }
-.techDropdown{
+
+.techDropdown {
     max-width: 30.333333%;
 }
-.col-header{
+
+.col-header {
     max-width: 30.333333%;
 }
