--- a/application/clients/desktop/src/app/flow-manager/flow-manager.component.scss
+++ b/application/clients/desktop/src/app/flow-manager/flow-manager.component.scss
@@ -13,6 +13,10 @@
     transition: transform 550ms cubic-bezier(0, 0, 0.2, 1);
 }
 
+.loading-image {
+    margin-bottom: 15px;
+}
+
 .cdk-drag-placeholder {
     background-color: Highlight;
 }
