--- a/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.html
+++ b/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.html
@@ -3,7 +3,9 @@
     <br />
     <button class="addRowButton" (click)="onAddRow()">Add Row</button>
     <br />
-    <ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" type = "timer"></ngx-spinner>
+    <ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" [fullScreen] = "true">
+        <img class = "loading-image" src='../../assets/img/loading-animation.gif' />
+      </ngx-spinner>
     <div class="errorField" style="padding-top: 2%; display: none">
         <ul>
             <li *ngIf="EnteredReserveWord == null" style="color:red">Please enter the valid one in Name Field</li>
