--- a/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.scss
+++ b/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.scss
@@ -18,14 +18,19 @@
 .addRowButton:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
     background-color: #39a521;
-    border-bottom: 3px solid #2d831a; 
+    border-bottom: 3px solid #2d831a;
 }
 
 .bottomButtons {
     float: right;
 }
-.component_top{
- margin-bottom: 10%;
+
+.component_top {
+    margin-bottom: 10%;
+}
+
+.loading-image {
+    margin-bottom: 15px;
 }
 
 // .modal-dialog {
