--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.scss
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.scss
@@ -1,43 +1,47 @@
 .modal {
-    text-align: center;
-  }
-  
-  @media screen and (min-width: 768px) { 
-    .modal:before {
-      display: inline-block;
-      vertical-align: middle;
-      content: " ";
-      height: 100%;
-    }
-  }
-  
-  .modal-dialog {
-    display: inline-block;
-    text-align: left;
-    vertical-align: middle;
-  }   
+  text-align: center;
+}
 
-  .modal-dialog {
-    position: relative;
-    width: 81% !important ;
-    margin: 0.5rem;
-    pointer-events: none;
+.loading-image {
+  margin-bottom: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.modal-dialog {
+  position: relative;
+  width: 81% !important;
+  margin: 0.5rem;
+  pointer-events: none;
 }
 
 .modal-footer {
-    display: flex;
-    align-items: center;
-    justify-content: center !important;
-    padding: 1rem;
-    border-top: 1px solid #ffffff !important;
-    border-bottom-right-radius: 0.3rem;
-    border-bottom-left-radius: 0.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center !important;
+  padding: 1rem;
+  border-top: 1px solid #ffffff !important;
+  border-bottom-right-radius: 0.3rem;
+  border-bottom-left-radius: 0.3rem;
 }
 
-  .img_size{
-    width:80%;
-  }
-  
+.img_size {
+  width: 80%;
+}
+
 .image {
   width: auto;
   height: 100px;
@@ -46,67 +50,70 @@
   color: #184573;
 }
 
-.editicon{
+.editicon {
   position: absolute;
   top: 95%;
   right: 83%;
   color: green;
   cursor: pointer;
-  width:14%
+  width: 14%
 }
 
-.trashicon{
+.trashicon {
   position: absolute;
   top: 92%;
   right: 43%;
   color: red;
   cursor: pointer;
-  width:16%
-
+  width: 16%
 }
 
-.fa.fa-pencil-square-o{
+.fa.fa-pencil-square-o {
   position: absolute;
   top: 100%;
   right: 83%;
   color: green;
   cursor: pointer;
 }
-.fa.fa-trash-o{
+
+.fa.fa-trash-o {
   position: absolute;
   top: 100%;
   right: 51%;
   color: red;
   cursor: pointer;
 }
-.desktop_only{
-  right:40% !important;
+
+.desktop_only {
+  right: 40% !important;
 }
 
 
 .entity-card {
   max-width: 300px;
-  }
-  
-  .createEntityButton {
+}
+
+.createEntityButton {
   float: right;
-  }
-  
-  .goToButton {
+}
+
+.goToButton {
   background-color: green;
   color: white;
-  }
-  
-  :host ::ng-deep .ck-editor__editable {
+}
+
+:host ::ng-deep .ck-editor__editable {
   min-height: 200px !important;
-  }
-  .modal-dialog{
+}
+
+.modal-dialog {
   overflow-y: initial !important
-  }
-  .feature .modal-body{
+}
+
+.feature .modal-body {
   height: 400px;
   overflow-y: auto;
-  }  
+}
 
 
 .image {
@@ -117,87 +124,95 @@
   color: #184573;
 }
 
-  .fa.fa-pencil-square-o{
-    position: absolute;
-    top: 100%;
-    right: 83%;
-    color: green;
-    cursor: pointer;
-  }
-  .fa.fa-trash-o{
-    position: absolute;
-    top: 100%;
-    right: 51%;
-    color: red;
-    cursor: pointer;
-  }
-
-  .delete .modal-body {
-  height: 70px;
-  overflow-y: auto;
-  }
-  .btn-space {
-    margin: 6px;
+.fa.fa-pencil-square-o {
+  position: absolute;
+  top: 100%;
+  right: 83%;
+  color: green;
+  cursor: pointer;
 }
 
-  .example-radio-group {
+.fa.fa-trash-o {
+  position: absolute;
+  top: 100%;
+  right: 51%;
+  color: red;
+  cursor: pointer;
+}
+
+.delete .modal-body {
+  height: 70px;
+  overflow-y: auto;
+}
+
+.btn-space {
+  margin: 6px;
+}
+
+.example-radio-group {
   display: flex;
   flex-direction: column;
   margin: 15px 0;
-  }
-  
-  .example-radio-button {
+}
+
+.example-radio-button {
   margin: 5px;
-  }
+}
 
 .code {
   padding-right: 20px;
   margin-right: -38px;
 }
-.screen_text{
+
+.screen_text {
   position: absolute;
   margin-left: 2%;
 }
 
-.mobile-screen-text{
+.mobile-screen-text {
   position: absolute;
   left: 2%;
   font-size: 20px !important;
   top: 2%;
 }
-.top_align{
+
+.top_align {
   margin-bottom: 6%;
 }
-.img_size{
-  width:80%;
+
+.img_size {
+  width: 80%;
 }
 
-.bottom_padding{
+.bottom_padding {
   margin-bottom: 5%;
 }
+
 .entity-card {
   max-width: 300px;
-  }
-  
-  .createEntityButton {
+}
+
+.createEntityButton {
   float: right;
-  }
-  
-  .goToButton {
+}
+
+.goToButton {
   background-color: green;
   color: white;
-  }
-  
-  :host ::ng-deep .ck-editor__editable {
+}
+
+:host ::ng-deep .ck-editor__editable {
   min-height: 200px !important;
-  }
-  .modal-dialog{
+}
+
+.modal-dialog {
   overflow-y: initial !important
-  }
-  .feature .modal-body{
+}
+
+.feature .modal-body {
   height: 400px;
   overflow-y: auto;
-  }  
+}
 
 
 .image {
@@ -208,93 +223,103 @@
   color: #184573;
 }
 
-  .fa.fa-pencil-square-o{
-    position: absolute;
-    top: 100%;
-    right: 83%;
-    color: green;
-    cursor: pointer;
-  }
-  .fa.fa-trash-o{
-    position: absolute;
-    top: 100%;
-    right: 51%;
-    color: red;
-    cursor: pointer;
-  }
-
-  .delete .modal-body {
-  height: 70px;
-  overflow-y: auto;
-  }
-  .btn-space {
-    margin: 6px;
+.fa.fa-pencil-square-o {
+  position: absolute;
+  top: 100%;
+  right: 83%;
+  color: green;
+  cursor: pointer;
 }
 
-  .example-radio-group {
+.fa.fa-trash-o {
+  position: absolute;
+  top: 100%;
+  right: 51%;
+  color: red;
+  cursor: pointer;
+}
+
+.delete .modal-body {
+  height: 70px;
+  overflow-y: auto;
+}
+
+.btn-space {
+  margin: 6px;
+}
+
+.example-radio-group {
   display: flex;
   flex-direction: column;
   margin: 15px 0;
-  }
-  
-  .example-radio-button {
+}
+
+.example-radio-button {
   margin: 5px;
-  }
+}
 
 .code {
   padding-right: 20px;
   margin-right: -38px;
 }
-.screen_text{
+
+.screen_text {
   position: absolute;
   margin-left: 2%;
 }
 
-.mobile-screen-text{
+.mobile-screen-text {
   position: absolute;
   left: 2%;
   font-size: 20px !important;
   top: 2%;
 }
-.top_align{
+
+.top_align {
   margin-bottom: 6%;
   margin-top: 3%;
 }
-.img_size{
-  width:80%;
+
+.img_size {
+  width: 80%;
 }
 
-.bottom_padding{
+.bottom_padding {
   margin-bottom: 5%;
 }
-.btn_color{
+
+.btn_color {
   background-color: #033668;
-  border-bottom: 3px solid #033668; 
+  border-bottom: 3px solid #033668;
 }
-.btn_color:hover{
+
+.btn_color:hover {
   background-color: #39a521;
-  border-bottom: 3px solid #2d831a; 
+  border-bottom: 3px solid #2d831a;
 }
-.btn-space{
+
+.btn-space {
   margin-right: 5%;
 }
-.flow_popup{
-  vertical-align:top;
-    min-width: 50%;
-    margin-top: 1%;
+
+.flow_popup {
+  vertical-align: top;
+  min-width: 50%;
+  margin-top: 1%;
 }
-.component_top{
+
+.component_top {
   margin-bottom: 6%;
 }
 
-#AddConnector{
+#AddConnector {
   background-color: #033668;
   border-bottom: 3px solid #033668;
-  color:white;
+  color: white;
 }
 
-#update{
-  color:white;
+#update {
+  color: white;
 }
 
 .modal-connector {
@@ -314,17 +339,13 @@
 
 .connetor-Header {
   background-color: rgba(0, 0, 0, .15);
-    border-bottom: none;
-    display: flex;
-    align-items: center !important;
-    justify-content: center;
-    padding: 1rem 1rem;
-    border-bottom: 1px solid #dee2e6;
-    border-top-left-radius: .3rem;
-    border-top-right-radius: .3rem;
+  border-bottom: none;
+  display: flex;
+  align-items: center !important;
+  justify-content: center;
+  padding: 1rem 1rem;
+  border-bottom: 1px solid #dee2e6;
+  border-top-left-radius: .3rem;
+  border-top-right-radius: .3rem;
 
 }
-
-
-
-
