--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -9,7 +9,9 @@
       </div>
     </div>
   </div>
-  <ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" type = "timer" [fullScreen] = "true"></ngx-spinner>
+  <ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" [fullScreen] = "true">
+    <img class = "loading-image" src='../../assets/img/loading-animation.gif' />
+  </ngx-spinner>
   <div style="height: 50px;"></div>
   <mat-accordion>
     <mat-expansion-panel [expanded]="true">
