--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -1,6 +1,8 @@
 <div class="mainDiv" id="editor-c">
 </div>
-<ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" type = "timer" [fullScreen] = "true"></ngx-spinner>
+<ngx-spinner bdColor = "rgba(231,220,220,0.33)" size = "small" color = "#b2acac" [fullScreen] = "true">
+  <img class = "loading-image" src='../../../assets/img/loading-animation.gif' />
+</ngx-spinner>
 
 <!-- grid popup model -->
 <div *ngIf="isGridPopup" id="agGridModal" class="modal" tabindex="-1" role="dialog" style="display: block">
