--- a/application/clients/desktop/src/app/template-screen/template-screen.component.scss
+++ b/application/clients/desktop/src/app/template-screen/template-screen.component.scss
@@ -1,18 +1,22 @@
 html,
 body {
   -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   height: 100%;
-  width: 100%; 
+  width: 100%;
   background: #FFF;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
- 
+
 .wrapper {
   display: table;
   height: 100%;
   width: 100%;
+}
+
+.loading-image {
+  margin-bottom: 15px;
 }
 
 .container {
@@ -20,6 +24,7 @@ body {
   padding: 1em;
   text-align: center;
 }
+
 h1.heading {
   color: #fff;
   font-size: 1.15em;
@@ -27,80 +32,93 @@ h1.heading {
   margin: 0 0 0.5em;
   color: #505050;
 }
+
 @media (min-width: 450px) {
   h1.heading {
     font-size: 3.55em;
   }
 }
+
 @media (min-width: 760px) {
   h1.heading {
     font-size: 3.05em;
   }
 }
+
 @media (min-width: 900px) {
   h1.heading {
     font-size: 3.25em;
     margin: 0 0 0.3em;
     margin: 5%;
   }
-} 
+}
+
 .card {
-    margin-bottom: 20px;
-    line-height: 1.42857143;
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); 
-    transition: box-shadow .25s;
-    border-style: solid;
-    border-color: yellow magenta;
-    border-width: 5px; 
-    cursor: pointer;
+  margin-bottom: 20px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  transition: box-shadow .25s;
+  border-style: solid;
+  border-color: yellow magenta;
+  border-width: 5px;
+  cursor: pointer;
 }
+
 .card:hover {
-  box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 .img-card {
   width: 100%;
-  height:200px;
+  height: 200px;
   background-size: contain;
-  border-top-left-radius:2px;
-  border-top-right-radius:2px;
-  display:block;
-    overflow: hidden;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+  display: block;
+  overflow: hidden;
 }
-.img-card img{
+
+.img-card img {
   width: 100%;
   height: 200px;
-  object-fit:cover; 
+  object-fit: cover;
   transition: all .25s ease;
-} 
-.card-content {
-  padding:15px;
-  text-align:left;
 }
+
+.card-content {
+  padding: 15px;
+  text-align: left;
+}
+
 .card-title {
-  margin-top:0px;
+  margin-top: 0px;
   font-weight: 700;
   font-size: 1.65em;
 }
+
 .card-title a {
   color: #000;
   text-decoration: none !important;
 }
+
 .card-read-more {
   border-top: 1px solid #D4D4D4;
 }
+
 .card-read-more a {
   text-decoration: none !important;
-  padding:10px;
-  font-weight:600;
+  padding: 10px;
+  font-weight: 600;
   text-transform: uppercase
 }
+
 .card-body p {
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: larger;
-    font-weight: 700;
+  text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: larger;
+  font-weight: 700;
 }
 
 
