--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -114,6 +114,7 @@
           <label for="screen-name" class="col-sm-4 col-form-label">Screen Name</label>
           <div class="col-sm-8">
             <input type="text" [(ngModel)]="screenName" (ngModelChange)="isScreenNameExist()" class="form-control"
+            onkeypress=" return ((event.charCode > 64 && event.charCode < 91) || (event.charCode > 96 && event.charCode < 123) || event.charCode == 8 || (event.charCode >= 48 && event.charCode <= 57))"
               id="screen-name">
             <small *ngIf="screenNameExist" style="font-style: italic;
              color: red;">This screen Name is Exist.</small>
